changed footer titles, updated footer social networks, fixed breadcrumb right align, some style changes, location of time changed

--- a/style.css
+++ b/style.css
@@ -107,28 +107,9 @@ em, i {
 strong, b {
 	font-weight:bold;
 }
-h1, h2, h3 {
-	font-family:'OpenSans', Helvetica, Verdana, Arial, Sans-Serif;
-	font-weight:bold;
-	font-style:normal;
+h1, h2, h3, h4, h5, h6 {
+	font-weight:normal;
 	margin-bottom:0.5em;
-}
-h4 {
-	font-style:italic;
-	font-weight:bold;
-}
-h1 {
-    font-family:inherit;
-    font-weight:bold;
-    color:Black;
-}
-h2 {
-	font-weight:bold;
-	color:black;
-}
-h3 {
-	font-weight:bold;
-	color:#444;
 }
 ::selection {
 	background:#59879f;
@@ -201,16 +182,12 @@ fieldset {
 	border-top-width: 1px;
 	border-top-style: solid;
 	margin-bottom:1em;
-}
-fieldset {
-	text-transform:uppercase;
-	font-weight:bold;
-	font-size:1.2em;
+	font-size:1.5em;
 	color:#444;
+	font-weight:normal;
 }
 fieldset a {
-	text-transform:uppercase;
-	font-weight:bold;
+	font-weight:normal;
 }
 .wrapper {
 	background: #EEEEEE;
@@ -315,10 +292,8 @@ fieldset a {
 }
 #subpages {
 	list-style:none;
-	font-family:'OpenSans';
 	font-weight:normal;
 	font-size:0.8em;
-	text-transform:uppercase;
 	width:100%;
 	margin:0 auto;
 	padding:10px 0;
@@ -331,9 +306,10 @@ fieldset a {
 	list-style-type:none;
 	height:100%;
 	text-align: right;
-        position:relative;
+    position:relative;
 	float:right;
 	z-index:10;
+	text-transform:uppercase;
 }
 #subpages .links {
 	display:table-cell;
@@ -1623,7 +1599,6 @@ textarea {
 label,
 legend {
 	display: block;
-	font-weight: bold;
 }
 select {
 	width: 220px;
@@ -1667,10 +1642,11 @@ span.required, #respond p span {
 }
 .time {
 	font-family:'OpenSans', sans-serif;
-	font-weight:bold;
 	text-transform:uppercase;
-	font-size:small;
 	color:#444;
+	float:left;
+	width:15%;
+	padding:0.5em;
 }
 .label {
 	text-align:right;
@@ -1715,6 +1691,7 @@ a:focus {
 	font-size:0.8em;
 	margin-top:0;
 	display:block;
+	font-weight:normal;
 }
 #footer .center {
 	float:none;
@@ -1735,10 +1712,12 @@ a:focus {
 	margin:0 1%;
 	list-style:none;
 	margin-bottom:1em;
+	font-weight:normal;
 }
 #footer a {
 	color:#ffffff;
 	padding-bottom:1px;
+	font-weight:normal;
 }
 #footer:hover a:hover {
 	border-bottom:1px dotted #FFFFFF;
@@ -1747,7 +1726,7 @@ a:focus {
 	color:#FFF;
 	font-size:1.4em;
 	text-transform:uppercase;
-	font-weight:bold;
+	font-weight:normal;
 }
 #footer li {
 	padding:2px 10px;
@@ -1790,11 +1769,6 @@ a:focus {
 	margin:0;
 }
 /*SEARCH*/
-.results fieldset {
-    border-color:#444;
-    margin:5px 0;
-    padding:0;
-}
 .search:after {
 	clear:both;
 }
